--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/lvtsum/virtc-system#readme",
   "devDependencies": {
     "nodemon": "^2.0.14",
+    "prettier": "2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
