--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
-  "compilerOptions": {                        
-    "target": "es6",                               
-    "module": "commonjs",                           
-    "outDir": "./dist",                             
-    "rootDir": "./src",                             
-    "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,                       
-  },
-  "exclude":[
-    "./node_modules"
-  ]
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "strict": true,
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "sourceMap": true,
+        "allowSyntheticDefaultImports": true,
+        "noImplicitAny": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": ["node_modules/*"]
+        }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["tests/*"]
 }
