--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/express": "^4.17.13",
         "@types/mysql": "^2.15.19",
         "express": "^4.17.1",
+        "js-base64": "^3.7.2",
         "mysql": "^2.18.1"
     }
 }
