--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
+        "@types/crypto-js": "^4.0.2",
         "@types/express": "^4.17.13",
         "@types/mysql": "^2.15.19",
+        "crypto-js": "^4.1.1",
         "express": "^4.17.1",
         "js-base64": "^3.7.2",
         "mysql": "^2.18.1"
